--- a/index.html
+++ b/index.html
@@ -8,7 +8,101 @@
         >
         <title>Leetcode</title>
     </head>
+    <style>
+        .array{
+            display: flex;
+        }
+        .array div {
+            width: 2rem;
+            text-align: center;
+            border: 1px solid #000;
+            margin-right: -1px;
+            background-color: #eee;
+        }
+        .array div.index{
+            color: red;
+        }
+        .array div.reachable{
+            background-color: yellowgreen;
+        }
+    </style>
     <body>
         <h1>Leetcode</h1>
+        <h2>
+            <a href="https://leetcode.com/problems/jump-game/">55. Jump game</a>
+        </h2>
+        <p>Relative Topics: Array, Dynamic Programming, Greedy</p>
+        <div>
+            <button onclick="start([2,3,1,1,4])">example 1</button>
+            <button onclick="start([3,2,1,0,4])">example 2</button>
+            <button id="jump" onclick="jump()">index + 1</button>
+            <p>index: <span id="55-i"></span></p>
+            <p>max: <span id="55-max"></span></p>
+            <div id="55-arr" class="array">
+            </div>
+            <p>output: <span id="55-ans"></span></p>
+        </div>
+        <pre>
+            <code>
+                const nums1 = [2,3,1,1,4];  // Output: true
+                const nums2 = [3,2,1,0,4];  // Output: false
+
+                function canJump(nums: number[]): boolean {
+                    let max = 0;
+                    for(let i = 0; i < nums.length; i++){
+                        if(max >= nums.length - 1) return true;
+                        if(i > max) return false;
+                        max = Math.max(i + nums[i], max);
+                    }
+                };
+            </code>
+        </pre>
+        <script>
+            let i = 0;
+            let max = 0;
+            let nums = [];
+
+            function start(numbers){
+                nums = numbers;
+                const arr = document.getElementById('55-arr');
+                arr.innerHTML='';
+                nums.forEach(num => {
+                    const div = document.createElement('div');
+                    div.innerText = num;
+                    arr.appendChild(div);
+                });
+                i = 0;
+                document.getElementById('55-i').innerText = '';
+                max = 0;
+                document.getElementById('55-max').innerText = '';
+                setAnser('');
+                console.log(i, max, nums);
+            }
+
+            function setIndex(index){
+                document.getElementById('55-i').innerText = i;
+                const arr = document.getElementById('55-arr');
+                arr.children[index].classList = arr.children[index].classList  +' index';
+            }
+            function setMax(value){
+                document.getElementById('55-max').innerText = max;
+                const arr = document.getElementById('55-arr');
+                for(let j = 0; j <= max; j++){
+                   arr.children[j].classList = 'reachable';
+                }
+            }
+            function setAnser(value){
+                document.getElementById('55-ans').innerText = value;
+            }
+
+            function jump() {
+                if(max >= nums.length - 1) return setAnser(true);
+                if(i > max) return setAnser(false);
+                max = Math.max(i + nums[i], max);
+                setMax(max);
+                setIndex(i);
+                i++;
+            };
+        </script>
     </body>
 </html>
